--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,8 +11,15 @@
   <h1>ETC JupyterLab Binder</h1>
 
   <h2>Regression Part 1</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/2ShMzFyInW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <a href="https://mybinder.org/v2/gh/educational-technology-collective/etc_composition_docker.git/main?urlpath=lab&filepath=week2_1b_regression_sampling_interpretation.ipynb">Week 2 1B Regression Sampling Interpretation</a>
+  <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2ShMzFyInW0" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </div>
+
+  <a
+    href="https://mybinder.org/v2/gh/educational-technology-collective/etc_composition_binder/main?urlpath=lab/tree/resources/week2_1b_regression_sampling_interpretation.ipynb">Week
+    2 1B Regression Sampling Interpretation</a>
 </body>
 
 </html>
